--- a/Views/EditorTemplates/Address.cshtml
+++ b/Views/EditorTemplates/Address.cshtml
@@ -1,43 +1,41 @@
 ﻿@model Cascade.WebShop.ViewModels.AddressViewModel
 @{
     string title = ViewData.ModelMetadata.GetDisplayName();
-    for (int i = 1; i < title.Length; i++)
-    {
-        if (title[i] >= 'A' && title[i] <= 'Z')
-        {
-            title = title.Insert(i, " ");
-            i++;
-        }
+    if (title == "InvoiceAddress"){
+        title = "Invoice Address";
+    }
+    else if (title == "ShippingAddress") { 
+        title = "Booking Address";
     }
 }
 
 <h4>@title</h4>
 <div class="form-group">
-    <label class="col-sm-2 control-label" for="@Html.FieldIdFor(m=>m.Name)">
+    <label class="col-sm-3 control-label" for="@Html.FieldIdFor(m=>m.Name)">
         @T("Name")
     </label>
-    <div class="col-sm-10">
+    <div class="col-sm-9">
         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
     </div>
 </div>
 <div class="form-group">
-    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.Address, T("Address"))</div>
-    <div class="col-sm-10">@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })</div>
+    <div class="col-sm-3 control-label">@Html.LabelFor(m => m.Address, T("Address"))</div>
+    <div class="col-sm-9">@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })</div>
 </div>
 <div class="form-group">
-    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.City, T("City"))</div>
-    <div class="col-sm-10">@Html.TextBoxFor(m => m.City, new { @class = "form-control" })</div>
+    <div class="col-sm-3 control-label">@Html.LabelFor(m => m.City, T("City"))</div>
+    <div class="col-sm-9">@Html.TextBoxFor(m => m.City, new { @class = "form-control" })</div>
 </div>
 <div class="form-group">
-    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.State, T("State"))</div>
-    <div class="col-sm-10 ">@Html.TextBoxFor(m => m.State, new { @class = "form-control" })</div>
+    <div class="col-sm-3 control-label">@Html.LabelFor(m => m.State, T("State"))</div>
+    <div class="col-sm-9 ">@Html.TextBoxFor(m => m.State, new { @class = "form-control" })</div>
 </div>
 <div class="form-group ">
-    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.Postcode, T("Postcode"))</div>
-    <div class="col-sm-10">@Html.TextBoxFor(m => m.Postcode, new { @class = "form-control" })</div>
+    <div class="col-sm-3 control-label">@Html.LabelFor(m => m.Postcode, T("Postcode"))</div>
+    <div class="col-sm-9">@Html.TextBoxFor(m => m.Postcode, new { @class = "form-control" })</div>
 </div>
 <div class="form-group ">
-    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.CountryCode, T("Country"))</div>
-    <div class="col-sm-10">@Html.DropDownListFor(m => m.CountryCode, new SelectList(Model.CountryCodes, "Value", "Text", Model.CountryCode), new { @class = "form-control" })</div>
+    <div class="col-sm-3 control-label">@Html.LabelFor(m => m.CountryCode, T("Country"))</div>
+    <div class="col-sm-9">@Html.DropDownListFor(m => m.CountryCode, new SelectList(Model.CountryCodes, "Value", "Text", Model.CountryCode), new { @class = "form-control" })</div>
 </div>
 
