--- a/Views/Checkout.SelectAddress.cshtml
+++ b/Views/Checkout.SelectAddress.cshtml
@@ -98,7 +98,7 @@
                 </div>
                 <div class="well form-actions">
                     <a class="btn btn-info" href="@Model.ContinueShoppingUrl">Return to shopping</a>
-                    <button type="submit" class="btn btn-primary pull-right">@T("Finish")</button>
+                    <button type="submit" class="btn btn-primary pull-right">@T("Book Now")</button>
                 </div>
             }
         </div>
