--- a/Views/Order.Created.cshtml
+++ b/Views/Order.Created.cshtml
@@ -89,7 +89,7 @@
                 @if (shippingAddress != null)
                 {
                     <div class="shipping-address">
-                        <h2>Shipping Address</h2>
+                        <h2>Booking Address</h2>
                         <ul class="address-fields">
                             <li>@shippingAddress.Name</li>
                             <li>@shippingAddress.Address</li>
