--- a/Views/Parts/ShoppingCartWidget.cshtml
+++ b/Views/Parts/ShoppingCartWidget.cshtml
@@ -1,17 +1,20 @@
 ﻿@{
     Script.Require("Globalize.SetCulture");
-    Script.Require("WebShop.Summary");
+    Script.Require("WebShop.Review");
     Style.Require("Cascade.WebShop.ShoppingCartWidget");
 
     var itemCount = (int)Model.ItemCount;
     var totalAmount = (decimal)Model.TotalAmount;
     var url = (string) Model.ContinueShoppingUrl;
 }
-<article class="summary" id="shoppingCartSummary"
-         data-load-shoppingcart-url="@Url.Action("GetSummary", "ShoppingCart", new { area = "Cascade.WebShop" })" 
-    >
+<article class="summary hidden" id="shoppingCartSummary"
+         data-load-shoppingcart-url="@Url.Action("GetSummary", "ShoppingCart", new { area = "Cascade.WebShop" })">
     <div>
-        <p data-bind="visible: itemCount() == 0" class="empty">Empty. Please visit our <a href="@Url.Content(url)">gallery</a></p>
-        <p data-bind="visible: itemCount() > 0"><span class="value" data-bind="text: itemCount"></span> items total <span data-bind = "text: Globalize.format(totalAmount(), 'c')" ></span > <a class="btn btn-small btn-primary pull-right" href="@Url.Action("Index", "ShoppingCart", new {area = "Cascade.WebShop"})"><i class="icon-shopping-cart"></i></a></p>
+        <p data-bind="visible: itemCount() == 0" class="empty">Empty. Please visit our <a href="@Url.Content(url)">shop</a></p>
+        <p data-bind="visible: itemCount() > 0">
+            <span class="value" data-bind="text: itemCount"></span> items total <span data-bind="text: Globalize.format(totalAmount(), 'c')"></span>
+            <span class="shoppingCartButton"><a class="btn btn-sm btn-primary" href="@Url.Action("Index", "ShoppingCart", new {area = "Cascade.WebShop"})"><i class="fa fa-shopping-cart"></i> Checkout</a></span>
+        </p>
+        
     </div>
 </article>
