Removed _RequestVerifiactionToken; fixed Cultures bug;

--- a/Views/Parts/ShoppingCartWidget.cshtml
+++ b/Views/Parts/ShoppingCartWidget.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Script.Require("Globalize.SetCulture");
+    Script.Require("Globalize.Cultures");
     Script.Require("WebShop.Review");
     Style.Require("Cascade.WebShop.ShoppingCartWidget");
 
