--- a/Views/ShoppingCart.cshtml
+++ b/Views/ShoppingCart.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Cascade.WebShop.Models
 @{
-    Script.Require("Globalize.SetCulture");
+    Script.Require("Globalize.Cultures");
     Script.Require("Cascade.WebShop.ShoppingCart");
     //Style.Require("Cascade.WebShop.ShoppingCart");
     var items = (IList<dynamic>)Model.Products;
